compiler/testData/cli/jvm/firFriendlyErrorIfNoJdkOptionIsSet.out
compiler/testData/cli/jvm/firFriendlyErrorIfNoJdkOptionIsSet.kt:2:11: error: resolution to the classifier 'class NullPointerException : Any' is not appropriate here.
    throw NullPointerException()
          ^
compiler/testData/cli/jvm/firFriendlyErrorIfNoJdkOptionIsSet.kt:2:11: error: type mismatch: inferred type is 'ERROR CLASS: Resolution to classifier', but 'kotlin.Throwable' was expected.
    throw NullPointerException()
          ^
COMPILATION_ERROR
